ndb - bug#42973 - fix parallel nodeid allocations with multiple ndb_mgmd